# compnet-lab6-client

./: .gitignore  CMakeLists.txt  imgui.ini  protocol.md  requirements.md  server.py
.github/workflows/: cmake-multi-platform.yml
src/: README.md  client.cpp  main.cpp
